[gd_scene load_steps=56 format=3 uid="uid://baoyjuljlmt1n"]

[ext_resource type="Texture2D" uid="uid://cuiob0moarilm" path="res://my assets/sprites/NPCs/enemies/boss/glitch-boss-bite-Sheet.png" id="1_hbrm4"]
[ext_resource type="Script" path="res://scripts/boss.gd" id="1_qg5gu"]
[ext_resource type="Texture2D" uid="uid://b2rolcb3x4qxt" path="res://my assets/sprites/NPCs/enemies/boss/glitch-boss-idle-Sheet.png" id="3_c050h"]
[ext_resource type="Texture2D" uid="uid://ywqm20on0kye" path="res://my assets/sprites/NPCs/enemies/boss/glitch-boss-die-Sheet.png" id="3_fef62"]
[ext_resource type="Texture2D" uid="uid://bcmddduwyo6le" path="res://my assets/sprites/NPCs/enemies/boss/glitch-boss-jump-Sheet.png" id="3_k4r7v"]
[ext_resource type="Texture2D" uid="uid://4dea04b5pfgh" path="res://my assets/sprites/NPCs/enemies/boss/glitch-boss-land-Sheet.png" id="4_s10ti"]
[ext_resource type="Texture2D" uid="uid://chny5ic0wjer6" path="res://my assets/sprites/NPCs/enemies/boss/glitch-boss-walk-Sheet.png" id="4_tnsr4"]
[ext_resource type="Texture2D" uid="uid://b0f5rxls4uola" path="res://my assets/sprites/NPCs/enemies/boss/glitch-boss-falling.png" id="4_y62f7"]
[ext_resource type="Texture2D" uid="uid://5uubc81o3d3n" path="res://my assets/sprites/NPCs/enemies/boss/glitch-boss-shoot-Sheet.png" id="6_fc1fq"]
[ext_resource type="Script" path="res://scripts/health.gd" id="7_4pyfh"]
[ext_resource type="Script" path="res://scripts/hitbox.gd" id="8_ioaxl"]
[ext_resource type="AudioStream" uid="uid://dcpiys7080kvk" path="res://assets/sounds/719129__sebastientate__splat-1.wav" id="9_r0xfm"]
[ext_resource type="Script" path="res://scripts/PassthroughArea.gd" id="10_mqnwa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vrpa3"]
atlas = ExtResource("1_hbrm4")
region = Rect2(0, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrx3y"]
atlas = ExtResource("1_hbrm4")
region = Rect2(112, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s61a"]
atlas = ExtResource("1_hbrm4")
region = Rect2(224, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgrwn"]
atlas = ExtResource("1_hbrm4")
region = Rect2(336, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxdvw"]
atlas = ExtResource("3_fef62")
region = Rect2(0, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilu8j"]
atlas = ExtResource("3_fef62")
region = Rect2(112, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f234t"]
atlas = ExtResource("3_fef62")
region = Rect2(224, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n8gq"]
atlas = ExtResource("3_fef62")
region = Rect2(336, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf48m"]
atlas = ExtResource("4_y62f7")
region = Rect2(0, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukm48"]
atlas = ExtResource("3_c050h")
region = Rect2(0, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jacg7"]
atlas = ExtResource("3_c050h")
region = Rect2(112, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5bpe"]
atlas = ExtResource("3_c050h")
region = Rect2(224, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hm8td"]
atlas = ExtResource("3_c050h")
region = Rect2(336, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_smksa"]
atlas = ExtResource("3_k4r7v")
region = Rect2(0, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j7n5"]
atlas = ExtResource("3_k4r7v")
region = Rect2(112, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5he2l"]
atlas = ExtResource("3_k4r7v")
region = Rect2(224, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqraa"]
atlas = ExtResource("3_k4r7v")
region = Rect2(336, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4qj0"]
atlas = ExtResource("4_s10ti")
region = Rect2(0, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsjrl"]
atlas = ExtResource("4_s10ti")
region = Rect2(112, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5fd1"]
atlas = ExtResource("4_s10ti")
region = Rect2(224, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iiekr"]
atlas = ExtResource("4_s10ti")
region = Rect2(336, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_axu67"]
atlas = ExtResource("4_tnsr4")
region = Rect2(0, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vto6n"]
atlas = ExtResource("4_tnsr4")
region = Rect2(112, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1sxp"]
atlas = ExtResource("4_tnsr4")
region = Rect2(224, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wbq0"]
atlas = ExtResource("4_tnsr4")
region = Rect2(336, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx3u8"]
atlas = ExtResource("4_tnsr4")
region = Rect2(448, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m13d"]
atlas = ExtResource("4_tnsr4")
region = Rect2(560, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_txqge"]
atlas = ExtResource("4_tnsr4")
region = Rect2(672, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdrns"]
atlas = ExtResource("4_tnsr4")
region = Rect2(784, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7p5n"]
atlas = ExtResource("4_tnsr4")
region = Rect2(896, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4ao5"]
atlas = ExtResource("4_tnsr4")
region = Rect2(1008, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tg1l"]
atlas = ExtResource("4_tnsr4")
region = Rect2(1120, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xccb"]
atlas = ExtResource("4_tnsr4")
region = Rect2(1232, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uarbc"]
atlas = ExtResource("6_fc1fq")
region = Rect2(0, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wmow"]
atlas = ExtResource("6_fc1fq")
region = Rect2(112, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqw7s"]
atlas = ExtResource("6_fc1fq")
region = Rect2(224, 0, 112, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4vx7"]
atlas = ExtResource("6_fc1fq")
region = Rect2(336, 0, 112, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6bpx0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrpa3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrx3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s61a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgrwn")
}],
"loop": false,
"name": &"bite",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxdvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilu8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f234t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n8gq")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf48m")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukm48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jacg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5bpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hm8td")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smksa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j7n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5he2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqraa")
}],
"loop": false,
"name": &"jump",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4qj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsjrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5fd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iiekr")
}],
"loop": false,
"name": &"land",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_axu67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vto6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1sxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wbq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx3u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m13d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txqge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdrns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7p5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4ao5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tg1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xccb")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uarbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wmow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqw7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4vx7")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s2l56"]
size = Vector2(33, 39)

[sub_resource type="CircleShape2D" id="CircleShape2D_t0m0f"]
radius = 112.071

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k7ycp"]
size = Vector2(9.00001, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tvjsp"]
size = Vector2(12.375, 7.6875)

[node name="boss" type="CharacterBody2D" groups=["boss"]]
collision_layer = 4
script = ExtResource("1_qg5gu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -32)
sprite_frames = SubResource("SpriteFrames_6bpx0")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7.49999, -16.5)
rotation = 1.5708
shape = SubResource("RectangleShape2D_s2l56")

[node name="DetectionArea2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea2D"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_t0m0f")

[node name="PassthroughArea" type="Area2D" parent="."]
visible = false
script = ExtResource("10_mqnwa")

[node name="CollisionShape2DPassable" type="CollisionShape2D" parent="PassthroughArea"]
position = Vector2(0.500004, -10)
rotation = -3.14159
shape = SubResource("RectangleShape2D_k7ycp")

[node name="Health" type="Node" parent="."]
script = ExtResource("7_4pyfh")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(22, -13)
target_position = Vector2(8, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-22, -13)
target_position = Vector2(-8, 0)

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(-1, -7)
collision_mask = 0
script = ExtResource("8_ioaxl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-15, -4)
shape = SubResource("RectangleShape2D_tvjsp")

[node name="SplatSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_r0xfm")
bus = &"SFX"

[connection signal="body_entered" from="DetectionArea2D" to="." method="_on_detection_area_2d_body_entered"]
[connection signal="body_exited" from="DetectionArea2D" to="." method="_on_detection_area_2d_body_exited"]
[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
